Update the parser to fit the changes of the site

--- a/data/config.json
+++ b/data/config.json
@@ -1,7 +1,6 @@
 {
-    "save_directory": "D:\\Pictures\\deviantart",
+    "save_directory": "./download",
     "users": [
-        "GUWEIZ",
-        "wataboku"
+        "axsens"
     ]
 }
